--- a/Magento_Catalog/templates/product/widget/viewed/recently-viewed-products-js.phtml
+++ b/Magento_Catalog/templates/product/widget/viewed/recently-viewed-products-js.phtml
@@ -11,6 +11,7 @@ declare(strict_types=1);
 use Hyva\GraphqlViewModel\ViewModel\GraphqlViewModel;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Currency;
+use Hyva\Theme\ViewModel\RecentlyViewedProducts;
 use Hyva\Theme\ViewModel\Store;
 use Hyva\Theme\ViewModel\ProductPage;
 use Magento\Catalog\Block\Product\Image;
@@ -37,6 +38,10 @@ $gqlViewModel = $viewModels->require(GraphqlViewModel::class);
 
 /** @var ProductPage $viewModelProducts */
 $viewModelProducts = $viewModels->require(ProductPage::class);
+
+/** @var RecentlyViewedProducts $recentlyViewed */
+$recentlyViewed = $viewModels->require(RecentlyViewedProducts::class);
+
 $currentProduct    = $viewModelProducts->getProduct();
 $currentProductSku = $currentProduct ? $currentProduct->getSku() : '';
 
@@ -57,66 +62,14 @@ $title = $title ?? __('Recently Viewed Products');
 ?>
 <script>
 
-    <?php /** This method returns the data structure to store in local storage if GraphQL is NOT queried. */ ?>
-    <?php /** It is declared in global scope to allow overriding should additional attributes be required. */ ?>
-    function getCurrentProductDataForRecentlyViewedList() {
-        <?php if (! $currentProduct): ?>
-        return {};
-        <?php else: ?>
-
-        function findUrlSuffix(url) {
-            let suffix = url.lastIndexOf('.') !== -1
-                ? url.substr(url.lastIndexOf('.'))
-                : '';
-            if (suffix.indexOf('?') !== -1) {
-                suffix = suffix.substring(0, suffix.indexOf('?'))
-            }
-            if (suffix.indexOf('#') !== -1) {
-                suffix = suffix.substring(0, suffix.indexOf('#'))
-            }
-            return suffix;
-        }
-
-        // Match GraphQL response structure
-        return {
-            id: <?= (int) $currentProduct->getId() ?>,
-            name: '<?= $escaper->escapeJs($currentProduct->getName()) ?>',
-            small_image: {
-                label: '<?= $escaper->escapeJs($productImage->getLabel()) ?>',
-                url: '<?= $escaper->escapeJs($escaper->escapeUrl($productImage->getImageUrl())) ?>'
-            },
-            url_key: '<?= $escaper->escapeJs($currentProduct->getUrlKey()) ?>',
-            url_suffix: findUrlSuffix('<?= $escaper->escapeJs($currentProduct->getUrlInStore()) ?>'),
-            visibility: <?= (int) $currentProduct->getVisibility() ?>,
-            status: <?= (int) $currentProduct->getStatus() ?>,
-            price_range: {
-                minimum_price: {
-                    regular_price: {
-                        value: <?= (float) $currentProduct->getPrice() ?>,
-                            currency: '<?= $escaper->escapeJs($viewModelCurrency->getCurrentCurrencyCode()) ?>'
-                    },
-                    final_price: {
-                        value: <?= (float) $currentProduct->getFinalPrice() ?>,
-                            currency: '<?= $escaper->escapeJs($viewModelCurrency->getCurrentCurrencyCode()) ?>'
-                    }
-                }
-            }
-        }
-        <?php endif; ?>
-    }
-
     function initRecentlyViewedProductsComponent<?= /** @noEscape */$uniqueId ?>(options) {
 
         const defaultOptions = {
             isSlider: false,
-            useGraphQL: <?= /** @noEscape */ $viewModelProducts->isFetchRecentlyViewedEnabled() ? 'true' : 'false' ?>,
+            useGraphQL: <?= /** @noEscape */ $recentlyViewed->isFetchRecentlyViewedEnabled() ? 'true' : 'false' ?>,
             noOfProductsToShow: <?= (int) $block->getData('page_size') ?>
         };
         const config = Object.assign({}, defaultOptions, options || {});
-
-        function writeRecentlyViewedToStorage(data) {
-            hyva.getBrowserStorage().setItem('recently_viewed_products', JSON.stringify(data));
-        }
 
         function readRecentlyViewedFromStorage () {
             const data = hyva.getBrowserStorage().getItem('recently_viewed_products');
@@ -126,42 +79,7 @@ $title = $title ?? __('Recently Viewed Products');
             }) : [];
         }
 
-        function removeExpiredProductsInLocalStorage() {
-            const updatedLocalStorageData = [];
-            readRecentlyViewedFromStorage().forEach(productData => {
-                if(productData.expiry > Date.now()){
-                    updatedLocalStorageData.push(productData);
-                }
-            });
-            writeRecentlyViewedToStorage(updatedLocalStorageData);
-        }
-
-        function addCurrentProductToRecentlyViewed() {
-            const currentProduct = createRecordForCurrentProduct();
-
-            if (currentProduct.sku !== '') {
-                const recentlyViewedSkusArray = readRecentlyViewedFromStorage()
-                    .filter(product => product.sku !== currentProduct.sku);
-                recentlyViewedSkusArray.unshift(currentProduct);
-                writeRecentlyViewedToStorage(recentlyViewedSkusArray);
-            }
-        }
-
-        function createRecordForCurrentProduct() {
-            const currentProduct = {
-                sku: '<?= $escaper->escapeJs($currentProductSku) ?>',
-                expiry: Date.now() + <?= (int) $viewModelProducts->getRecentlyViewedLifeTime() ?> * 1000
-            };
-            return config.useGraphQL
-                ? currentProduct
-                : Object.assign(currentProduct, getCurrentProductDataForRecentlyViewedList());
-        }
-
-        removeExpiredProductsInLocalStorage();
-        addCurrentProductToRecentlyViewed();
-
         return {
-            active: 0,
             products: [],
             currency: [],
             noOfProductsToShow: config.noOfProductsToShow,
@@ -331,6 +249,9 @@ $title = $title ?? __('Recently Viewed Products');
                     );
                 });
             },
+
+            // slider properties
+            active: 0,
             getSlider() {
                 return this.$el.querySelector('.js_slides');
             },
@@ -350,7 +271,7 @@ $title = $title ?? __('Recently Viewed Products');
                 if (slider) {
                     this.active = Math.ceil(
                         Math.round(
-                            slider.scrollLeft / (slider.scrollWidth / this.products.length)
+                            slider.scrollLeft / (slider.scrollWidth / (this.products.length + this.pageFillers))
                         ) / this.pageSize
                     ) * this.pageSize;
                 }
