--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -40,7 +40,7 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
     $recaptchaLegalNoticeBlock = $recaptchaData[ReCaptcha::RECAPTCHA_LEGAL_NOTICE_BLOCK];
 }
 ?>
-<div class="mx-auto px-5 py-6 items-center" id="customer-reviews">
+<div class="mx-auto py-6 items-center" id="customer-reviews">
     <div class="card w-full px-6 py-3">
         <div class="text-xl my-3">
             <?= $escaper->escapeHtml(__('Write Your Own Review')) ?>
@@ -67,9 +67,9 @@ if ($recaptchaViewModel !== null && $recaptchaData = $recaptchaViewModel->getRec
                     </legend>
                     <?php if ($block->getRatings() && $block->getRatings()->getSize()): ?>
                         <fieldset>
-                            <div class="flex flex-row items-center mt-4 mb-3">
+                            <div class="flex flex-col sm:flex-row items-center mt-4 mb-3">
                                 <div class="text-md"><?= $escaper->escapeHtml(__('Your Rating')) ?>:</div>
-                                <div class="ml-1">
+                                <div class="sm:ml-1">
                                     <div id="product-review-table">
                                         <?php foreach ($block->getRatings() as $rating): ?>
                                             <div class="ml-1">
