--- a/Magento_Theme/templates/elements/slider.phtml
+++ b/Magento_Theme/templates/elements/slider.phtml
@@ -316,6 +316,7 @@ $graphqlQuery = $gqlViewModel->query("slider_products_query", $query ?: "
             <div class="relative w-full overflow-x-hidden focus-within:ring-1 active:ring-0 ring-blue-500
                         ring-opacity-50">
                 <div class="relative flex flex-nowrap w-full overflow-auto transition-all js_slides snap"
+                     id="related-products"
                      @scroll.debounce="calcActive"
                 >
                     <template x-for="product in products">
