--- a/Magento_ReCaptchaContact/layout/contact_index_index.xml
+++ b/Magento_ReCaptchaContact/layout/contact_index_index.xml
@@ -28,6 +28,8 @@
         <referenceContainer name="before.body.end">
             <block name="recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/script_loader.phtml"
                    ifconfig="recaptcha_frontend/type_for/contact"/>
+            <block name="checkbox_recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/checkbox_script_loader.phtml"
+                   ifconfig="recaptcha_frontend/type_for/contact"/>
         </referenceContainer>
     </body>
 </page>
