--- a/Magento_ReCaptchaCustomer/layout/customer_account_edit.xml
+++ b/Magento_ReCaptchaCustomer/layout/customer_account_edit.xml
@@ -31,6 +31,12 @@
                     <argument name="viewModelStoreConfig" xsi:type="object">Hyva\Theme\ViewModel\StoreConfig</argument>
                 </arguments>
             </block>
+            <block name="checkbox_recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/checkbox_script_loader.phtml"
+                   ifconfig="recaptcha_frontend/type_for/customer_edit">
+                <arguments>
+                    <argument name="viewModelStoreConfig" xsi:type="object">Hyva\Theme\ViewModel\StoreConfig</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
