--- a/Magento_ReCaptchaCustomer/layout/customer_account_forgotpassword.xml
+++ b/Magento_ReCaptchaCustomer/layout/customer_account_forgotpassword.xml
@@ -28,6 +28,8 @@
         <referenceContainer name="before.body.end">
             <block name="recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/script_loader.phtml"
                    ifconfig="recaptcha_frontend/type_for/customer_forgot_password"/>
+            <block name="checkbox_recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/checkbox_script_loader.phtml"
+                   ifconfig="recaptcha_frontend/type_for/customer_forgot_password"/>
         </referenceContainer>
     </body>
 </page>
