--- a/Magento_ReCaptchaNewsletter/layout/default.xml
+++ b/Magento_ReCaptchaNewsletter/layout/default.xml
@@ -29,6 +29,12 @@
                     <argument name="viewModelStoreConfig" xsi:type="object">Hyva\Theme\ViewModel\StoreConfig</argument>
                 </arguments>
             </block>
+            <block name="checkbox_recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/checkbox_script_loader.phtml"
+                   ifconfig="recaptcha_frontend/type_for/newsletter">
+                <arguments>
+                    <argument name="viewModelStoreConfig" xsi:type="object">Hyva\Theme\ViewModel\StoreConfig</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
