--- a/Magento_ReCaptchaReview/layout/catalog_product_view.xml
+++ b/Magento_ReCaptchaReview/layout/catalog_product_view.xml
@@ -27,6 +27,8 @@
         <referenceContainer name="before.body.end">
             <block name="recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/script_loader.phtml"
                    ifconfig="recaptcha_frontend/type_for/product_review"/>
+            <block name="checkbox_recaptcha_base" template="Magento_ReCaptchaFrontendUi::js/checkbox_script_loader.phtml"
+                   ifconfig="recaptcha_frontend/type_for/product_review"/>
         </referenceContainer>
     </body>
 </page>
