#355 Show price adjustments in option labels
Closes #355

--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -43,15 +43,19 @@ use Magento\Framework\View\Element\Template;
                     }
                 });
             },
-            findSimpleIndex () {
+            findSimpleIndex() {
+                // a better method name would be `updateSelectedSimpleIndex` but keeping for bc
+                this.productIndex = this.calculateSimpleIndex(this.selectedValues);
+            },
+            calculateSimpleIndex(selectedValues) {
                 const productIndexes = this.optionConfig.index;
-                this.productIndex = Object.keys(productIndexes).find(productIndex => {
-                    const currentProductIndex = productIndexes[productIndex];
+                return Object.keys(productIndexes).find(productIndex => {
+                    const currentProductOptions = productIndexes[productIndex];
 
-                    for (const productOption in currentProductIndex) {
+                    for (const productOption in currentProductOptions) {
                         if (
-                            this.selectedValues[productOption] &&
-                            this.selectedValues[productOption] !== currentProductIndex[productOption]
+                            selectedValues[productOption] &&
+                            selectedValues[productOption] !== currentProductOptions[productOption]
                         ) {
                             return false;
                         }
@@ -61,6 +65,10 @@ use Magento\Framework\View\Element\Template;
             },
             productIndex: 0,
             findAllowedAttributeOptions() {
+                // a better method name would be `updateAllowedAttributeOptions` but keeping for bc
+                this.allowedAttributeOptions = this.calculateAllowedAttributeOptions(this.selectedValues);
+            },
+            calculateAllowedAttributeOptions(selectedValues) {
                 const allAttributes = this.optionConfig.attributes;
                 const allAttributesSorted = Object.values(allAttributes).sort((a,b) => {
                     return a.position - b.position
@@ -72,10 +80,10 @@ use Magento\Framework\View\Element\Template;
                 const newAllowedAttributeOptions = [];
 
                 allAttributesSorted.forEach(attribute => {
-                    if (previousOption && this.selectedValues[previousOption]) {
+                    if (previousOption && selectedValues[previousOption]) {
                         availableIndexes = availableIndexes.filter(availableIndex => {
                             return productIndexes[availableIndex][previousOption] ===
-                                this.selectedValues[previousOption]
+                                selectedValues[previousOption]
                         })
                     }
                     newAllowedAttributeOptions[attribute.id] =
@@ -86,10 +94,39 @@ use Magento\Framework\View\Element\Template;
                         });
                     previousOption = attribute.id;
                 });
-                this.allowedAttributeOptions = newAllowedAttributeOptions;
+                return newAllowedAttributeOptions;
+            },
+            findAttributeByOptionId(optionId) {
+                for (const attributeId in this.optionConfig.attributes) {
+                    const attributeOptions = this.optionConfig.attributes[attributeId].options || [];
+                    if (attributeOptions.find(option => option.id === optionId)) {
+                        return attributeId;
+                    }
+                }
             },
             getAllowedAttributeOptions(attributeId) {
                 return this.allowedAttributeOptions[attributeId] || []
+            },
+            getAttributeOptionLabel(option) {
+                if (! this.optionConfig.optionPrices[this.productIndex]) {
+                    // no current simple product configuration selected
+                    return option.label;
+                }
+                const attributeId = this.findAttributeByOptionId(option.id);
+                const optionSelection = Object.assign({}, this.selectedValues, {[attributeId]: option.id});
+                const simpleIndex = this.calculateSimpleIndex(optionSelection);
+                if (! simpleIndex || simpleIndex === this.productIndex) {
+                    return option.label;
+                }
+
+                const currentPrice = this.optionConfig.optionPrices[this.productIndex].finalPrice.amount;
+                if (this.optionConfig.optionPrices[simpleIndex]) {
+                    const optionPrice = this.optionConfig.optionPrices[simpleIndex].finalPrice.amount;
+                    if (optionPrice !== currentPrice){
+                        return option.label + ' ' + hyva.formatPrice(optionPrice - currentPrice, true);
+                    }
+                }
+                return option.label;
             },
             changeOption(optionId, value) {
                 this.selectedValues[optionId] = value;
